# mhwaveedit

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  copynotice  cvscompile  git-release.sh  gitcompile.sh  mhwaveedit.1  mkinstalldirs  package_mhwaveedit.sh
docgen/: D01_view.doc  D02_playing.doc  D03_recording.doc  D04_editing.doc  D05_effects.doc  D06_quality.doc  D07_formats.doc  D08_files.doc  D09_keyboard.doc  D10_bugreport.doc  D11_helpout.doc  D12_contact.doc  O00_general.doc  R00_intro.doc  R01_install.doc  R02_config.doc  R03_start.doc  README.docgen  gendocs.sh
m4/: Makefile.in
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  mhwaveedit.pot  mkinstalldirs  pl.gmo  pl.po  ru.gmo  ru.po  splithelp.rb  sv.gmo  sv.po  zh_CN.gmo  zh_CN.po
share/: Makefile.am  Makefile.in
share/applications/: mhwaveedit.desktop
share/pixmaps/: mhwaveedit.xpm
src/: CMakeLists.txt  Makefile.am  Makefile.in  bitmap.c  bitmap.h  button_bounce.xpm  button_copy.xpm  button_cursorend.xpm  button_cursorstart.xpm  button_cut.xpm  button_delete.xpm  button_follow.xpm  button_loop.xpm  button_mixer.xpm  button_open.xpm  button_paste.xpm  button_pasteover.xpm  button_play.xpm  button_playselection.xpm  button_record.xpm  button_redo.xpm  button_save.xpm  button_stop.xpm  button_undo.xpm  chunk.c  chunk.h  chunkview.c  chunkview.h  combinechannelsdialog.c  combinechannelsdialog.h  combo.c  combo.h  config.h  configdialog.c  configdialog.h  convert_inc.c  dataformat.c  dataformat.h  datasource.c  datasource.h  (+104 more)
src/oldbuttons/: button_copy.xpm  button_cursorend.xpm  button_cursorstart.xpm  button_cut.xpm  button_delete.xpm  button_follow.xpm  button_loop.xpm  button_mixer.xpm  button_open.xpm  button_paste.xpm  button_pasteover.xpm  button_play.xpm  button_playselection.xpm  button_record.xpm  button_save.xpm  button_stop.xpm  button_undo.xpm
